--- a/phppythonjavalei.html
+++ b/phppythonjavalei.html
@@ -14,7 +14,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
-<title>Title | Tocat&#039;s Blog</title>
+<title>PHP,JAVA和Python中类定义的区别</title>
 
 <link rel="stylesheet" type="text/css" media="all" href="style.css?v=1" />
 
